fourth homework: logic
