# ok-blog-be-common/src/main/kotlin/ru/otus/otuskotlin/blog/backend/common/models/StubCase.kt
@@ -1,0 +1,7 @@
+package ru.otus.otuskotlin.blog.backend.common.models
+
+enum class StubCase {
+    NONE,
+    SUCCESS,
+    DATABASE_ERROR;
+}
