# specs/blog.api-spec.yaml
@@ -426,6 +426,11 @@ components:
             - prod
             - test
             - stub
+        stubCase:
+          type: string
+          enum:
+            - success
+            - database_error
 
     BasePaginatedRequest:
       type: object
@@ -478,7 +483,7 @@ components:
         - $ref: '#/components/schemas/BaseRequest'
         - type: object
           properties:
-            createPost:
+            creatablePost:
               $ref: '#/components/schemas/CreatablePost'
             debug:
               allOf:
